--- a/flickr/flickr.html
+++ b/flickr/flickr.html
@@ -35,7 +35,7 @@
            <a class="nav-link" href="../tic-tac-toe/tic-tac-toe.html">Tic Tac Toe Game</a>
          </li>
        </ul>
-       <a href="https://github.com/kpfromer">
+       <a href="https://github.com/kadekool">
          <img
            src="https://image.flaticon.com/icons/png/512/25/25231.png"
            width="30px"
